OPHYK-585 re-enable disabled tests, fix deprecations and warnings